# tasks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tasks.h
3rd/: ExternalProject.cmake  ExternalProjectBoost.cmake  ExternalProjectGbenchmark.cmake  ExternalProjectGtests.cmake
benchmark/: BM_Task_11_158.cpp  BM_Task_7_33.cpp  BM_task_16_8.cpp  BM_task_9_48.cpp  CMakeLists.txt  benchmark.cpp  benchmark.h  quickSort.cpp  random.h
build-benchmark-Desktop-Debug/: CMakeCache.txt  Makefile  Task16_8.txt  Task16_8Sort.txt  benchmark  cmake_install.cmake
build-benchmark-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-62de2a4702ce939a41f3.json  cmakeFiles-v1-930873fd52991ce8837e.json  codemodel-v2-8d9caa82d32a5dbef1a9.json  index-2021-03-17T18-17-00-0004.json  target-benchmark-Debug-d9eb3742fa3dfe0d30e5.json
build-task_11_158-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  task_11_158
build-task_11_158-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-c602328d9ed6f8dd3598.json  cmakeFiles-v1-54f79be1cc7cac92710d.json  codemodel-v2-75bedd261c19f6ace78c.json  index-2021-03-17T18-11-51-0227.json  target-task_11_158-Debug-788e63bce4f306376d38.json
cmake/: ExternalProjectBoost.cmake  ExternalProjectGbenchmark.cmake  ExternalProjectGtests.cmake
headers/: benchmark.h  cli.h  generate.h  mylist.h  random.h  tasks.h  tests.h
source/: CMakeLists.txt  Task_11_158.cpp  Task_11_158_main.cpp  Task_13_1_45.cpp  Task_13_1_45_main.cpp  Task_7_33.cpp  Task_7_33_main.cpp  Task_9_48.cpp  Task_9_48_main.cpp  cli.cpp
task_11_158/: CMakeLists.txt  main.cpp
task_13_1_45/: CMakeLists.txt  cli.cpp  cli.h  file.txt
task_7_33/: CMakeLists.txt  Task_7_33.cpp
task_9_48/: CMakeLists.txt  Task_9_48.cpp  main.cpp
tests/: CMakeLists.txt  Task_7_33_tests.cpp  main.cpp  task_11_158_tests.cpp  task_13_1_45_tests.cpp  task_7_33_tests.cpp  task_9_48_tests.cpp  tests.h
