cmake_minimum_required(VERSION 3.5)

project(Tasks LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_subdirectory(task_7_33)
add_subdirectory(task_9_48)
add_subdirectory(task_13_1_45)
add_subdirectory(task_11_158)
add_subdirectory(benchmark)
add_subdirectory(tests)

